# TodoMVC-Backend

./: README.md  docker-compose.yml  local.env  run.sh
common/models/: task.py
common/repositories/: factory.py  task.py
common/services/: __init__.py  auth.py  person.py  task.py
flask/: pyproject.toml
flask/app/: __init__.py
flask/app/helpers/: response.py
flask/app/migrations/: 0000000006_0000000005_migration.py
flask/app/views/: __init__.py  person.py  task.py
services/email_transmitter/: config.json
